@@ -2,6 +2,8 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-288: Bandwidth tracking - subset of GIRAPH-262. (aching)
+
   GIRAPH-289: Add thread and channel pooling to NettyClient and
   NettyServer. (ekoontz via aching)
 
